# tauri-specta

./: Cargo.toml
examples/app/src/: bindings.ts
examples/app/src-tauri/: Cargo.toml  tauri.conf.json
examples/app/src-tauri/src/: main.rs
examples/custom-plugin/app/src-tauri/: Cargo.toml  tauri.conf.json
examples/custom-plugin/plugin/src/: lib.rs
macros/: Cargo.toml
src/: event.rs  globals.ts  js_ts.rs  lib.rs
