[package]
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
categories = ["web-programming", "asynchronous"]
description = "Completely typesafe Tauri commands"
documentation = "https://docs.rs/tauri-specta/latest/tauri-specta"
edition = "2021"
include = ["/src", "/README.md", "/LICENCE"]
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
license = "MIT"
name = "tauri-specta"
repository = "https://github.com/oscartbeaumont/tauri-specta"
version = "2.0.0-rc.4.tauri-2.0.0-beta"

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
javascript = ["specta/typescript", "specta/js_doc"]
typescript = ["specta/typescript", "specta/js_doc"]

[dependencies]
heck = "0.5"
indoc = "2.0.4"
serde = { workspace = true }
serde_json = "1.0.107"
specta = { workspace = true }
tauri = { workspace = true }
tauri-specta-macros = { version = "2.0.0-rc", path = "./macros" }
thiserror = "1.0.49"

[dev-dependencies]
doc-comment = "0.3.3"

[workspace]
members = [
  "examples/app/src-tauri",
  "examples/custom-plugin/app/src-tauri",
  "examples/custom-plugin/plugin",
  "macros",
]

[workspace.dependencies]
serde = "1.0.188"
specta = { git = "https://github.com/cloudcad/specta.git", features = [
  "functions",
  "tauri",
] }
tauri = "2.0.0-beta"
