[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "tauri-specta-example-app"
publish = false
repository = ""
rust-version = "1.57"
version = "0.0.0"

[build-dependencies]
tauri-build = {version = "2.0.0-beta", features = [] }

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta.workspace = true
tauri = {version = "2.0.0-beta.13", features = ["protocol-asset"] }
tauri-specta = {path = "../../../", features = ["typescript", "javascript"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
