[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "tauri-specta-example-custom-plugin-app"
repository = ""
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "2.0.0-beta", features = []}

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "2.0.0-beta.13", features = []}
tauri-specta-example-custom-plugin = {path = "../../plugin"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
